--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,61 @@
+# add spring.main.banner-mode=off to application.properties
+spring.main.banner-mode=off
+
+# add reduce logging level to application.properties
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate.stat=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.type.descriptor.sql.BasicExtractor=TRACE
+
+# add logging root level to warn to application.properties
+logging.level.root=WARN
+
+# add logging level for spring security to application.properties
+logging.level.org.springframework.security=INFO
+
+# add turn off spring security to application.properties
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+# add server.port=8080 to application.properties
+server.port=8080
+
+# add spring.profiles.active=dev to application.properties
+spring.profiles.active=dev
+
+# add spring.datasource.url=jdbc:mysql://localhost:3306/your_db_name to application.properties use unicode serverTimezone=America/Bogota for Colombia time zone create database if not exists books default character set utf8 collate utf8_general_ci; allowclientmultiqueries=true allowpublickeyretrieval=true uselegacydatetimecode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/books?useUnicode=true&serverTimezone=America/Bogota&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true&allowMultiQueries=true&useLegacyDatetimeCode=false
+
+# add spring.datasource.username=root to application.properties
+spring.datasource.username=root
+
+# add datasource.password=your_password to application.properties
+spring.datasource.password=your_password
+
+# add spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver to application.properties
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# add spring.jpa.hibernate.ddl-auto=update to application.properties
+spring.jpa.hibernate.ddl-auto=update
+
+# add spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect to application.properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# add spring.jpa.properties.hibernate.show_sql=true to application.properties
+spring.jpa.properties.hibernate.show_sql=true
+
+# add spring.jpa.properties.hibernate.format_sql=true to application.properties
+spring.jpa.properties.hibernate.format_sql=true
+
+# add spring.jpa.properties.hibernate.use_sql_comments=true to application.properties
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+
+
+
+
+
+
 
