--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,23 +25,19 @@ server.port=8080
 # add spring.profiles.active=dev to application.properties
 spring.profiles.active=dev
 
-# add spring.datasource.url=jdbc:mysql://localhost:3306/your_db_name to application.properties use unicode serverTimezone=America/Bogota for Colombia time zone create database if not exists books default character set utf8 collate utf8_general_ci; allowclientmultiqueries=true allowpublickeyretrieval=true uselegacydatetimecode=false
-spring.datasource.url=jdbc:mysql://localhost:3306/books?useUnicode=true&serverTimezone=America/Bogota&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true&allowMultiQueries=true&useLegacyDatetimeCode=false
-
+# add spring.datasource.url=jdbc:mysql://localhost:3306/your_db_name  use unicode serverTimezone=America/Bogota for Colombia time zone create database if not exists books default character set utf8 collate utf8_general_ci; allowclientmultiqueries=true allowpublickeyretrieval=true uselegacydatetimecode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/books?useUnicode=true&serverTimezone=America/Bogota&createDatabaseIfNotExist=true&allowMultiQueries=true&allowPublicKeyRetrieval=true&useLegacyDatetimeCode=false
 # add spring.datasource.username=root to application.properties
-spring.datasource.username=root
+spring.datasource.username=springstudent
 
 # add datasource.password=your_password to application.properties
-spring.datasource.password=your_password
+spring.datasource.password=springstudent
 
 # add spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver to application.properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # add spring.jpa.hibernate.ddl-auto=update to application.properties
 spring.jpa.hibernate.ddl-auto=update
-
-# add spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect to application.properties
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # add spring.jpa.properties.hibernate.show_sql=true to application.properties
 spring.jpa.properties.hibernate.show_sql=true
